fix circled-link text not centered on Apple devices

--- a/assets/style/global.css
+++ b/assets/style/global.css
@@ -57,7 +57,7 @@ a:visited {
   font-size: 14px;
   font-weight: 400;
   margin: 0 auto;
-  padding: 5px 0;
+  height: 25px;
   text-align: center;
   text-transform: uppercase;
   width: 120px;
